@@ -1,8 +1,13 @@
 ﻿note
 	description: "Development testing for [$source EL_HACKER_INTERCEPT_SERVLET] in Studio workbench mode"
-	author: ""
-	date: "$Date$"
-	revision: "$Revision$"
+
+	author: "Finnian Reilly"
+	copyright: "Copyright (c) 2001-2022 Finnian Reilly"
+	contact: "finnian at eiffel hyphen loop dot com"
+
+	license: "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
+	date: "2023-10-21 9:06:34 GMT (Saturday 21st October 2023)"
+	revision: "1"
 
 class
 	EL_HACKER_INTERCEPT_TEST_SERVLET
