@@ -2,6 +2,12 @@ pyxis-doc:
 	version = 1.0; encoding = "ISO-8859-15"
 
 manifest:
+	notes:
+		author = "Finnian Reilly"
+		copyright = "Copyright (c) 2001-2022 Finnian Reilly"
+		contact = "finnian at eiffel hyphen loop dot com"
+		license = "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
+
 	# libraries
 	location:
 		"library/base"
